==> AIZER-egl/RCJ_Soccer_Open_2024/rpi_pico/lib/hardware/Adafruit_BNO055.cpp <==
#include "Adafruit_BNO055.h"

bool Adafruit_BNO055::begin(bool port, uint32_t baud, uint8_t sda, uint8_t scl, adafruit_bno055_opmode_t mode) {
    if (port == I2C_PORT_0) {
        _port = i2c0;
    } else if (port == I2C_PORT_1) {
        _port = i2c1;
    }
    i2c_init(i2c0, baud);
    gpio_set_function(sda, GPIO_FUNC_I2C);
    gpio_set_function(scl, GPIO_FUNC_I2C);
    gpio_pull_up(sda);
    gpio_pull_up(scl);


    sleep_ms(1000); // hold on for boot

    uint8_t id = read8(BNO055_CHIP_ID_ADDR);
    if (id != BNO055_ID) {
        sleep_ms(1000); // hold on for boot
        id = read8(BNO055_CHIP_ID_ADDR);
        if (id != BNO055_ID) {
            return false; // still not? ok bail
        }
    }

    /* Switch to config mode (just in case since this is the default) */
    setMode(OPERATION_MODE_CONFIG);

    /* Reset */
    write8(BNO055_SYS_TRIGGER_ADDR, 0x20);
    /* sleep_ms incrased to 30ms due to power issues https://tinyurl.com/y375z699 */
    sleep_ms(30);
    while (read8(BNO055_CHIP_ID_ADDR) != BNO055_ID) {
        sleep_ms(10);
    }
    sleep_ms(50);

    /* Set to normal power mode */
    write8(BNO055_PWR_MODE_ADDR, POWER_MODE_NORMAL);
    sleep_ms(10);

    write8(BNO055_PAGE_ID_ADDR, 0);

    /* Set the output units */
    /*
    uint8_t unitsel = (0 << 7) | // Orientation = Android
                      (0 << 4) | // Temperature = Celsius
                      (0 << 2) | // Euler = Degrees
                      (1 << 1) | // Gyro = Rads
                      (0 << 0);  // Accelerometer = m/s^2
    write8(BNO055_UNIT_SEL_ADDR, unitsel);
    */

    /* Configure axis mapping (see section 3.4) */
    /*
    write8(BNO055_AXIS_MAP_CONFIG_ADDR, REMAP_CONFIG_P2); // P0-P7, Default is P1
    sleep_ms(10);
    write8(BNO055_AXIS_MAP_SIGN_ADDR, REMAP_SIGN_P2); // P0-P7, Default is P1
    sleep_ms(10);
    */

    write8(BNO055_SYS_TRIGGER_ADDR, 0x0);
    sleep_ms(10);
    /* Set the requested operating mode (see section 3.3) */
    setMode(mode);
    sleep_ms(20);

    return true;
}

bool Adafruit_BNO055::write8(adafruit_bno055_reg_t reg, uint8_t value) {
    uint8_t buffer[2] = {(uint8_t)reg, (uint8_t)value};
    i2c_write_blocking(_port, _address, buffer, 2, false);
    return true;
}

uint8_t Adafruit_BNO055::read8(adafruit_bno055_reg_t reg) {
    uint8_t buffer[1] = {reg};
    i2c_write_blocking(_port, _address, buffer, 1, false);
    i2c_read_blocking(_port, _address, buffer, 1, false);
    return buffer[0];
}

bool Adafruit_BNO055::readLen(adafruit_bno055_reg_t reg, uint8_t *buffer,
                              uint8_t len) {
    uint8_t reg_buf[1] = {(uint8_t)reg};
    i2c_write_blocking(_port, _address, reg_buf, 1, true);
    return i2c_read_blocking(_port, _address, buffer, len, false);
}
