==> wbeebe/EspressifProjects/v4/esp32-c3-i2c-displays/main/Adafruit_BNO055.cpp <==
#include <limits.h>
#include <math.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#include "Adafruit_BNO055.hpp"

bool Adafruit_BNO055::begin(adafruit_bno055_opmode_t mode) {
  //
  // This was rewritten from the original Adafruit code to check for the
  // ESP-IDF I2C return type on the action as well as the device ID.
  // This is more robust and the calls to the underlying ESP-IDF I2C libraries
  // are more efficient. The original code would lock into an endless loop
  // otherwise.
  //
  // This is how I will try to do this in the rest of the BNO055 code.
  //
  vTaskDelay(1000 / portTICK_PERIOD_MS);
  uint8_t data[8] = {BNO055_CHIP_ID_ADDR};
  auto ret = i2c_master_write_read_device(0, address, data, 1, data, 1, I2C_TICKS_TO_WAIT);

  if (ret != ESP_OK or data[0] != BNO055_ID) {
    ESP_LOGI(TAG, "FAILED CHIP ID");
    return false;
  }

  // Switch to config mode (just in case since this is the default)
  //
  setMode(OPERATION_MODE_CONFIG);

  // Reset
  //
  data[0] = BNO055_SYS_TRIGGER_ADDR, data[1] = 0x20;

  if (i2c_master_write_to_device(0, address, data, 2, I2C_TICKS_TO_WAIT) != ESP_OK) {
    ESP_LOGI(TAG, "FAILED TO SOFTWARE RESET CHIP");
    return false;
  }

  // Delay increased to 1000ms/1s after explicit checking inside a do/while loop
  // checking to see how long the BNO055 came out of its explicit reset.
  //
  // Remove the do/while loop and only do this once. If you can't do it this
  // one time, then you've failed.
  //
  vTaskDelay(1000 / portTICK_PERIOD_MS);

  data[0] = BNO055_CHIP_ID_ADDR;
  ret = i2c_master_write_read_device(0, address, data, 1, data, 1, I2C_TICKS_TO_WAIT);
  ESP_LOGI(TAG,"CHECK TO SEE IF BNO055 COMES OUT OF SOFTWARE RESET");

  if (ret != ESP_OK or data[0] != BNO055_ID) {
    ESP_LOGI(TAG,"FAILED TO COME OUT OF SOFTWARE RESET");
    return false;
  }

  vTaskDelay(50 / portTICK_PERIOD_MS);

  // Set to normal power mode
  //
  write8(BNO055_PWR_MODE_ADDR, POWER_MODE_NORMAL);
  vTaskDelay(10 / portTICK_PERIOD_MS);

  write8(BNO055_PAGE_ID_ADDR, 0);

  write8(BNO055_SYS_TRIGGER_ADDR, 0x0);
  vTaskDelay(10 / portTICK_PERIOD_MS);
  // Set the requested operating mode (see section 3.3)
  setMode(mode);
  vTaskDelay(20 / portTICK_PERIOD_MS);

  return true;
}

bool Adafruit_BNO055::write8(adafruit_bno055_reg_t reg, uint8_t value) {
  uint8_t buffer[2] = {(uint8_t)reg, (uint8_t)value};
  return write_data(address, buffer, sizeof(buffer)) == ESP_OK;
}

uint8_t Adafruit_BNO055::read8(adafruit_bno055_reg_t reg) {
  uint8_t buffer[1] = {reg};
  i2c_master_write_read_device(0,address,buffer,1,buffer,1,1000 / portTICK_RATE_MS);
  return buffer[0];
}

bool Adafruit_BNO055::readLen(adafruit_bno055_reg_t reg, uint8_t *buffer, uint8_t len) {
  uint8_t reg_buf[1] = {(uint8_t)reg};
  return read_register(address, reg, reg_buf, sizeof(reg_buf)) == ESP_OK;
}
